# ethtent

./: .gitignore  README.md  ego-config.json  ego-projects.json  jest.config.js  package.json
canisters/: Cargo.toml
canisters/dapp/cross-dca/actor/: Cargo.toml
canisters/dapp/cross-dca/actor/src/: actor.rs  mod.rs
canisters/dapp/cross-dca/mod/: Cargo.toml
canisters/dapp/cross-dca/mod/src/: mod.rs  types.rs
canisters/dapp/eth_tents/actor/: Cargo.toml
canisters/dapp/eth_tents/actor/src/: actor.rs  mod.rs
canisters/dapp/eth_tents/mod/: Cargo.toml
canisters/dapp/eth_tents/mod/src/: intent.rs  memory.rs  mod.rs  state.rs  types.rs
canisters/dapp/eth_tents/mod/src/rpc/: mod.rs  otc_wallet.rs  stable_state.rs
canisters/dapp/eth_users/actor/: Cargo.toml
canisters/dapp/eth_users/actor/src/: actor.rs  mod.rs
canisters/dapp/eth_users/mod/: Cargo.toml
canisters/dapp/eth_users/mod/src/: address.rs  memory.rs  mod.rs  state.rs  types.rs
canisters/dapp/eth_users/mod/src/common/: memory.rs  mod.rs
canisters/dapp/eth_users/mod/src/delegation/: hash.rs  mod.rs  signature.rs  signature_map.rs
canisters/dapp/eth_users/mod/src/message/: btc.rs  evm.rs  mod.rs
canisters/dapp/eth_users/mod/src/verifier/: memory.rs  types.rs
canisters/lib/helpers/: Cargo.toml
canisters/lib/helpers/src/: hash.rs  http.rs  memory.rs  mod.rs  task_timer.rs
canisters/lib/ic-web3/: .cargo_vcs_info.json  Cargo.toml
canisters/lib/ic-web3/examples/: main.rs
canisters/lib/ic-web3/src/: ic.rs  lib.rs
canisters/lib/ic-web3/src/api/: accounts.rs
canisters/lib/ic-web3/src/contract/: mod.rs
canisters/lib/ic-web3/src/transports/: ic_http.rs  ic_http_client.rs
clients/frontend/: .eslintrc.json  next.config.js  package-lock.json  package.json  tsconfig.json
clients/frontend/components/: CreateAPlanModal.tsx  Footer.tsx  Header.tsx  InvestmentPlan.tsx  InvestmentPlanView.tsx  TableInvest.tsx
clients/frontend/components/ui/: button.tsx  checkbox.tsx  input.tsx
clients/frontend/pages/: _app.tsx  _document.tsx  index.tsx
clients/frontend/services/: baseConnection.ts  utils.ts
clients/frontend/services/abis/: dai.ts
clients/frontend/services/idls/: eth_tents.d.ts  eth_tents.idl.ts  eth_users.d.ts  eth_users.idl.ts
clients/frontend/services/mm/: mm.tsx
clients/frontend/services/walletConnect/: index.tsx
clients/frontend/services/walletConnect/constants/: default.ts  index.ts  logo.ts
clients/frontend/services/walletConnect/helpers/: api.ts  eip1271.ts  index.ts  types.ts  utilities.ts
clients/frontend/types/: InvestPlanType.ts
clients/idls/: eth_tents.d.ts  eth_tents.idl.ts  eth_users.d.ts
clients/scripts/: canister.test.ts  console.test.ts  vault.ts
clients/worker/: package.json  start.sh  stop.sh  tsconfig.json  wrangler.toml
clients/worker/src/: lib.ts  signer.ts  vault.ts  worker.ts
clients/worker/src/idls/: eth_tents.idl.ts  ins_manager.d.ts  ins_manager.idl.ts  ins_wallet.d.ts  ins_wallet.idl.ts
configs/: local.json  mainnet.json
contract/: README.md  hardhat.config.js  package-lock.json  package.json  temp.txt
contract/contracts/: Dai_demo.sol  ethntent.sol  vault.sol
contract/scripts/: deploy.js
contract/test/: Dai_demo.js
