[package]
name = "eth_tents"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/mod.rs"
crate-type = ["lib", "cdylib"]

[dependencies]
async-trait = { workspace = true }
candid = { workspace = true }
ciborium = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-certified-map = { workspace = true }
ic-stable-structures = { workspace = true }
serde_bytes = { workspace = true }
serde = { workspace = true }
itertools = { workspace = true }
ego_types = { workspace = true }
ego_lib = { workspace = true }
ego_macros = { workspace = true }
hex = { workspace = true }
eth_tents_mod = { path = "../mod" }

[features]
default = ["build_candid"]
build_candid = []
no_candid = []
debug = []
